# Calculator

./: CMakeLists.txt
src/: calc_widget.cpp  calc_widget.h  mainwindow.cpp  mainwindow.h  math_core.cpp  math_core.h
